[package]
name = "sbrain"
version = "0.3.2"
authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]

description = "A library for evaluating Semantic Brain, a minimalistic multiparadigm programming language."
keywords = ["esolang", "interpreter", "language"]

repository = "https://github.com/SilverWingedSeraph/sbrain"

license = "GPL-2.0"
