[package]
name = "sbrain"
version = "0.5.0"
authors = ["Leonora Tindall <nora@nora.codes>"]

description = "A library for evaluating Semantic Brain, a minimalistic multiparadigm programming language optimized for genetic programming applications."
keywords = ["esolang", "interpreter", "language", "learning", "genetic"]

repository = "https://github.com/NoraCodes/sbrain"
homepage = "https://esolangs.org/wiki/Semantic_Brain"
documentation = "https://docs.rs/sbrain"
readme = "README.md"
categories = ["emulators", "science"]

license = "GPL-2.0"
